@@ -1,7 +1,6 @@
 package org.oss.focussnip.utils;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import java.security.Key;
 import java.security.KeyPair;
@@ -38,12 +37,12 @@ public class SecretKeyUtil {
 
     //解码返回byte
     public static byte[] decryptBASE64(String key) throws Exception {
-        return (new BASE64Decoder()).decodeBuffer(key);
+        return Base64.getDecoder().decode(key);
     }
 
     //编码返回字符串
     public static String encryptBASE64(byte[] key) throws Exception {
-        return (new BASE64Encoder()).encodeBuffer(key);
+        return new String(Base64.getEncoder().encode(key));
     }
 
     //使用KeyPairGenerator 生成公私钥，存放于map对象中
